feat: change password; fix: update user;
