# backend/apis/user/route.go
@@ -6,4 +6,5 @@ func RegisterRoutes(app fiber.Router) {
 	//app.Get("/users/all", GetAllUsers)
 	app.Get("/users/data", GetUserInfo)
 	app.Put("/users", UpdateUser)
+	app.Put("/users/password", ChangePassword)
 }
