# backend/apis/user/schemas.go
@@ -11,9 +11,19 @@ type CreateUserRequest struct {
 
 // difference between pointer and value withomitempty
 type UpdateUserRequest struct {
-	Age      int8   `json:"age" validate:"omitempty"`
-	Email    string `json:"email"`
-	Gender   string `json:"gender"`
-	Password string `json:"password"`
-	Phone    string `json:"phone"`
+	Age    int8   `json:"age" validate:"omitempty"`
+	Email  string `json:"email"`
+	Gender string `json:"gender"`
+	Phone  string `json:"phone"`
+}
+
+type ChangePasswordRequest struct {
+	OldPassword string `json:"old_password" validate:"omitempty"`
+	Email       string `json:"email" validate:"omitempty"`
+	NewPassword string `json:"new_password"`
+}
+
+type TokenResponse struct {
+	Access  string `json:"access,omitempty"`
+	Message string `json:"message,omitempty"`
 }
